# HW_30_Django_JWT

./: README.md  manage.py  pyproject.toml  pytest.ini
HW_30_Django_JWT/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  permissions.py  urls.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_selection.py
ads/models/: ad.py  category.py  selection.py
ads/serializers/: ad.py  category.py  selection.py
ads/views/: ad.py  category.py  selection.py
data/: ad.json  csv_to_json.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/ads/: ad_create_test.py  ad_detail_test.py  selection_create_test.py  test_category_list.py
tests/users/: test_location_list.py
users/: models.py  urls.py  validators.py
users/migrations/: 0001_initial.py  0002_alter_user_age.py  0003_alter_user_age_alter_user_birth_date.py  0003_alter_user_role.py
users/serializers/: location.py  user.py
users/views/: location.py  user.py
